--- a/src/main/webapp/template/authorize_manager.html
+++ b/src/main/webapp/template/authorize_manager.html
@@ -4,14 +4,8 @@
             <div class="fl">办公区:</div>
             <div class="type-select" name="type-select">
                 <i>&nbsp;</i>
-                <input type="text" value="" placeholder="请选择办公区">
-                <ul>
-                    <li data-value="1">分析对象</li>
-                    <li data-value="2">分析对象</li>
-                    <li data-value="3">分析对象</li>
-                    <li data-value="4">分析对象</li>
-                    <li data-value="5">分析对象</li>
-                </ul>
+                <input id="office_input" type="text" readonly>
+                <ul id="office_list"></ul>
             </div>
             <div class="clear"></div>
         </li>
@@ -19,15 +13,19 @@
         <li style="margin-top:-3px">
             <div class="fl">员工姓名:</div>
             <div class="type-select" name="type-select" >
-                <input name="Username" type="text" placeholder="" style="width:120px;" class="data_name">
+                <input id="emp_input" type="text" placeholder="" style="width:120px;" class="data_name">
                 <ul class="nameList" style="max-height: 250px; overflow-y: auto; display: none;"></ul>
             </div>
         </li>
-        <li class="but_submit" style="width:75px">查询</li>
+        <li class="but_submit" style="width:75px" onclick="select(true)">查询</li>
         <div class="clear"></div>
     </ul>
+    <div class="addPeople" onclick="openLayer('insert')">
+        <img src="images/icon4.png">
+        <span>&nbsp;&nbsp;&nbsp;添加权限</span>
+    </div>
     <div class="subject-table">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ddd" >
+        <table id="am_list" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ddd" >
             <tr>
                 <th width="15%" style='padding-left: 30px;'>员工姓名</th>
                 <th width="25%">所属部门</th>
@@ -64,190 +62,20 @@
                     </ul>
                 </td>
             </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>常钰 0080</td>
-                <td>IT系统中心--产品部</td>
-                <td>北京中关村资本大厦、广州****大厦、上海****大厦</td>
-                <td>2017-01-01 8：00：00</td>
-                <td>常钰</td>
-                <td class="pr">
-                    <div class="type-ellipse">&nbsp;</div>
-                    <ul class="drop-down" style='display: none;'>
-                        <li>编辑</li>
-                        <li>删除</li>
-                    </ul>
-                </td>
-            </tr>
         </table>
     </div>
-    <div class="count" style='text-align: center;color:#a1a1a1;display: block;'>显示&nbsp;<span class='num'>1</span>&nbsp;/&nbsp;<span class='count_num'>10</span>&nbsp;个结果</div>
-    <div class="load_more" style='display: block;'>显示更多</div>
+    <div class="count" style='text-align: center;color:#a1a1a1;display: block;'>显示&nbsp;<span id="num" class='num'></span>&nbsp;/&nbsp;<span id="count_num" class='count_num'></span>&nbsp;个结果</div>
+    <div id="load_more" class="load_more" style='display: block;' onclick="load()">显示更多</div>
+</div>
+
+<div id="layer" class='model' style="display: none;">
+    <div class="layer">
+    <div id="layer_title" class="title"></div>
+    <div class="layer_con">
+        <div class="select_ndustry"><ul id="layer_ul"></ul></div>
+        <div class="keep" style="text-align: center">
+            <span  id="submit" class="but_submit" style="width:100px">确定</span>
+        </div>
+    </div>
+    </div>
 </div>
