--- a/src/main/webapp/template/scheduled_preview.html
+++ b/src/main/webapp/template/scheduled_preview.html
@@ -4,14 +4,8 @@
             <div class="fl">办公区:</div>
             <div class="type-select" name="type-select">
                 <i>&nbsp;</i>
-                <input type="text" value="" placeholder="请选择办公区">
-                <ul>
-                    <li data-value="1">分析对象</li>
-                    <li data-value="2">分析对象</li>
-                    <li data-value="3">分析对象</li>
-                    <li data-value="4">分析对象</li>
-                    <li data-value="5">分析对象</li>
-                </ul>
+                <input id="office_input" type="text" placeholder="请选择办公区" readonly>
+                <ul id="office_list"></ul>
             </div>
             <div class="clear"></div>
         </li>
@@ -19,7 +13,7 @@
             <div class="fl">会议室:</div>
             <div class="type-select" name="type-select">
                 <i>&nbsp;</i>
-                <input type="text" value="" placeholder="请选择办公区">
+                <input type="text" value="" placeholder="请选择会议室">
                 <ul>
                     <li data-value="1">分析对象</li>
                     <li data-value="2">分析对象</li>
