--- a/src/main/webapp/css/reset.css
+++ b/src/main/webapp/css/reset.css
@@ -43,11 +43,11 @@ a.orange{color:#ff9116;text-decoration:underline;}
 .no_unl{text-decoration:none;}
 .back_color{background-color:#F3F3F5}
 
-.color01{color:#3399ff}
-.color02{color:#24cab0}
-.color03{color:#fdb444}
-.color04{color:#f87d54}
-.color05{color:#f55353}
+.color01{color:#3399ff;}
+.color02{color:#24cab0;}
+.color03{color:#fdb444;}
+.color04{color:#f87d54;}
+.color05{color:#f55353;}
 /*蓝色*/
 .color06{color:#3399ff;}
 /*橙色*/
