--- a/src/main/webapp/template/authorize_manager.html
+++ b/src/main/webapp/template/authorize_manager.html
@@ -12,8 +12,8 @@
         <li style="margin-top:-3px">
             <div class="fl">员工姓名:</div>
             <div class="type-select" name="type-select" >
-                <input id="emp_input" type="text" placeholder="" style="width:120px;" class="data_name">
-                <ul class="nameList" style="max-height: 250px; overflow-y: auto; display: none;"></ul>
+                <input id="emp_input" type="text" placeholder="" style="width:120px;" class="data_name" oninput="fuzzyMatching()">
+                <ul id="emp_list" class="nameList" style="max-height: 250px; overflow-y: auto;"></ul>
             </div>
         </li>
         <li class="but_submit" style="width:75px" onclick="select(true)">查询</li>
@@ -39,13 +39,13 @@
                 <li>
                     <div class="fl">员工编号:</div>
                     <div class="type-select" name="type-select">
-                        <input id="layer_emp_num" type="text" placeholder="请输入员工编号">
+                        <input id="layer_emp_num" type="text" placeholder="请输入员工编号" maxlength="5" onkeyup="this.value=this.value.replace(/\D/g,'')"  onafterpaste="this.value=this.value.replace(/\D/g,'')">
                     </div>
                     <div class="clear"></div>
                 </li>
                 <li>
                     <div class="fl">授权办公区:</div>
-                    <div id="layer_office_list" class="fr" style="height:28px;line-height: 20px;margin-top: 8px;"></div>
+                    <div id="layer_office_list" class="fr" style="height:auto;line-height: 20px;margin-top: 8px;"></div>
                 </li><div class="clear"></div>
             </ul>
         </div>
