--- a/src/main/webapp/template/scheduled_preview.html
+++ b/src/main/webapp/template/scheduled_preview.html
@@ -13,14 +13,8 @@
             <div class="fl">会议室:</div>
             <div class="type-select" name="type-select">
                 <i>&nbsp;</i>
-                <input type="text" value="" placeholder="请选择会议室">
-                <ul>
-                    <li data-value="1">分析对象</li>
-                    <li data-value="2">分析对象</li>
-                    <li data-value="3">分析对象</li>
-                    <li data-value="4">分析对象</li>
-                    <li data-value="5">分析对象</li>
-                </ul>
+                <input id="meeting_input" type="text" placeholder="请选择会议室">
+                <ul id="meeting_list"></ul>
             </div>
             <div class="clear"></div>
         </li>
@@ -28,13 +22,12 @@
             <div class="fl">会议状态:</div>
             <div class="type-select" name="type-select">
                 <i>&nbsp;</i>
-                <input type="text" value=""  placeholder="请选择状态">
+                <input id="status_input" type="text" placeholder="请选择状态">
                 <ul>
-                    <li data-value="1">分析对象</li>
-                    <li data-value="2">分析对象</li>
-                    <li data-value="3">分析对象</li>
-                    <li data-value="4">分析对象</li>
-                    <li data-value="5">分析对象</li>
+                    <li data-value="-2">全部</li>
+                    <li data-value="-1">未开始</li>
+                    <li data-value="0">会议中</li>
+                    <li data-value="1">已结束</li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -42,119 +35,16 @@
         <li style="margin-top:-3px">
             <div class="fl">预订者:</div>
             <div class="type-select" name="type-select" >
-                <input name="Username" type="text" placeholder="" style="width:120px;" class="data_name">
-                <ul class="nameList" style="max-height: 250px; overflow-y: auto; display: none;"></ul>
+                <input id="emp_input" class="data_name" type="text" style="width:120px;" oninput="fuzzyMatching()">
+                <ul id="emp_list" class="nameList" style="max-height: 250px; overflow-y: auto;"></ul>
             </div>
         </li>
-        <li class="but_submit" style="width:75px">查询</li>
+        <li class="but_submit" style="width:75px" onclick="select(true)">查询</li>
         <div class="clear"></div>
     </ul>
     <div class="subject-table">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ddd" >
-            <tr>
-                <th width="10%" style='padding-left: 30px;'>会议室</th>
-                <th width="13%">预定时间</th>
-                <th width="13%">会议主题</th>
-                <th width="5%">预订者</th>
-                <th width="13%">预订者部门</th>
-                <th width="10%">联系电话</th>
-                <th width="13%">办公区</th>
-                <th width="5%">会议状态</th>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color07'>会议中</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td>已结束</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-            <tr>
-                <td style='padding-left: 30px;'>7层-会议室1</td>
-                <td>2017-01-01 10：00：00</td>
-                <td>产品技术委员会例会</td>
-                <td>常钰</td>
-                <td>IT系统中心--产品部</td>
-                <td>13666666666</td>
-                <td>北京中关村资本大厦</td>
-                <td class='color06'>未开始</td>
-            </tr>
-
-        </table>
+        <table id="sp_list" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ddd" ></table>
     </div>
-    <div class="count" style='text-align: center;color:#a1a1a1;display: block;'>显示&nbsp;<span class='num'>1</span>&nbsp;/&nbsp;<span class='count_num'>10</span>&nbsp;个结果</div>
-    <div class="load_more" style='display: block;'>显示更多</div>
+    <div class="count" style='text-align: center;color:#a1a1a1;display: block;'>显示&nbsp;<span id="num" class='num'></span>&nbsp;/&nbsp;<span id="count_num" class='count_num'></span>&nbsp;个结果</div>
+    <div id="load_more" class="load_more" style='display: block;' onclick="load()">显示更多</div>
 </div>
