--- a/src/main/webapp/template/meeting_manager.html
+++ b/src/main/webapp/template/meeting_manager.html
@@ -44,7 +44,7 @@
             <li>
                 <div class="fl">办公区:</div>
                 <div class="type-select" name="type-select">
-                    <i>&nbsp;</i>
+                    <i id="layer_remove">&nbsp;</i>
                     <input id="layer_office_input" type="text" placeholder="请选择办公区" readonly>
                     <ul id="layer_office_list" style="top:21px; width: 296px;"></ul>
                 </div><div class="clear"></div>
