--- a/src/main/webapp/app/css/style.css
+++ b/src/main/webapp/app/css/style.css
@@ -60,7 +60,7 @@ input {
     border-radius: 5px;
     height: 0.78rem;
     line-height: 0.78rem;
-    padding: 0 10px;
+    padding: 0 0.1rem;
     font-size: 0.2rem;
 }
 input[type=radio] {
@@ -77,15 +77,21 @@ a:hover {color:#2a93f5;}
 .time_box{
     padding:0.35rem 0.3rem;
     border-bottom: 1px solid #e4e4e4;
+    border-top: 1px solid #e4e4e4;
 }
 /*表格*/
-.table_box{
-    
+.table_box .info{
+    display: none;
+    color:#ccc;
+    line-height: 2rem;
+    text-align: center;
+    height:2rem;
 }
 .table_item{
+    /*display: none;*/
     padding:0 0.3rem;
-    height:1.5rem;
-    line-height: 1.5rem;
+    height:1rem;
+    line-height: 1rem;
     border-bottom: 1px solid #e4e4e4;
     position: relative;
 }
@@ -143,7 +149,14 @@ a:hover {color:#2a93f5;}
     height:0.34rem;
 }
 .layer .info{
+    height:100%;
     float: left;
+}
+.layer .info p{
+    max-width: 5.25rem;
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 .layer .button{
     float: right;
@@ -209,6 +222,14 @@ a:hover {color:#2a93f5;}
     font-size: 0.3rem;
     margin-right: 0.3rem;
 }
+.list .list_text input{
+    width:5.3rem;
+    font-size: 0.3rem;
+    text-align: right;
+    border:0 none;
+    outline: 0 none;
+}
+
 .list .table{
     margin: 0 0.3rem 0.4rem 0;
     border:1px solid #e4e4e4;
@@ -357,16 +378,16 @@ a:hover {color:#2a93f5;}
     width: 5.85rem;
     height:auto;
     position: fixed;
-    top:5%;
+    bottom:50%;
     left:0;
     right:0;
     margin:auto;
-/*     transform: translateY(50%); */
     color:#000;
     padding-left: 0;
     padding-right: 0;
     background: rgba(0,0,0,0);
-     border-radius: 5px;
+    border-radius: 5px;
+    transform: translateY(50%);
 }
 .layer .title{
     height: 1rem;
@@ -398,7 +419,7 @@ a:hover {color:#2a93f5;}
 }
 .layer .mark{
     height:0.3rem;
-    line-height:0.24rem ;
+    line-height:0.3rem ;
     color:#f68974;
     font-size: 0.26rem;
     padding-left: 0.35rem;
