--- a/src/main/webapp/app/css/style.css
+++ b/src/main/webapp/app/css/style.css
@@ -10,6 +10,7 @@ html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockqu
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -69,7 +70,7 @@ input[type=radio] {
     border: 0;
 }
 
-a {color:#333; text-decoration:none;cursor: pointer;}
+a {color:#333; text-decoration:none;}
 a:hover {color:#2a93f5;}
 .clear {clear:both; height:0px; width:100%; font-size:1px; line-height:0px; visibility:hidden; overflow:hidden; }
 .fl{float: left;}
@@ -81,12 +82,17 @@ a:hover {color:#2a93f5;}
     border-top: 1px solid #e4e4e4;
 }
 /*表格*/
-.table_box .info{
+.table_box{
+    background: #fff;
+    min-height: 8.96rem;
+}
+.table_box .info,.list .info{
     display: none;
-    color:#ccc;
+    color:#aaa;
     line-height: 2rem;
     text-align: center;
     height:2rem;
+    font-size: 0.2rem;
 }
 .table_item{
     /*display: none;*/
@@ -119,8 +125,8 @@ a:hover {color:#2a93f5;}
     background: #d4eefe;
 }
 .table_item ul li.booked{
-    background: #f2f2f2;
-    border-right: 2px solid #f2f2f2;
+    background: #f0f0f0;
+    border-right: 2px solid #f0f0f0;
 }
 
 /*弹层*/
@@ -432,7 +438,7 @@ a:hover {color:#2a93f5;}
 .layer .btn_con{
     width: 11.7rem;
     -webkit-transition: transform ease .3s;
-	-webkit-transform: translateX(0);
+    -webkit-transform: translateX(0);
 }
 .layer .btn_con p{
     width: 5.6rem;
