--- a/src/main/webapp/app/css/style.css
+++ b/src/main/webapp/app/css/style.css
@@ -92,11 +92,10 @@ a:hover {color:#2a93f5;}
     line-height: 2rem;
     text-align: center;
     height:2rem;
-    font-size: 0.2rem;
+    font-size: 0.24rem;
 }
 .table_item{
     /*display: none;*/
-    padding:0 0.3rem;
     height:1rem;
     line-height: 1rem;
     border-bottom: 1px solid #e4e4e4;
@@ -118,8 +117,13 @@ a:hover {color:#2a93f5;}
 .table_item ul li{
     float: left;
     height:100%;
-    width:5.5%;
+    /*width:5.5%;*/
+    width: 0.38rem;
 
+}
+.table_item ul li.first,
+.table_item ul li.last{
+    width: 0.71rem;
 }
 .table_item ul li.active{
     background: #d4eefe;
@@ -158,12 +162,17 @@ a:hover {color:#2a93f5;}
 .layer .info{
     height:100%;
     float: left;
+    padding-top: 0.1rem;
 }
 .layer .info p{
     max-width: 5.25rem;
+    margin-top: 0;
+    height:0.6rem;
+    line-height: 0.6rem;
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
+
 }
 .layer .button{
     float: right;
