--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -859,7 +859,8 @@
 }
 .select_ndustry{
     margin-bottom: 10px;
-
+    max-height: 600px;
+    overflow-y: auto;
 }
 .select_ndustry ul{
     margin-top:15px;
@@ -893,7 +894,38 @@
 .layer .select_ndustry li .check_con{
     float: left;
     display: inline;
-    margin:0 15px 10px 0;
+    margin:0 0 10px 0;
+}
+.layer input{
+   /*border:1px solid #e4e4e4;*/
+}
+.layer .areaList{
+    margin-top: 0;
+}
+.layer .areaList li{
+    float: left;
+    width: 200px;
+    text-align: left;
+    margin:0;
+    padding:0;
+}
+.layer .areaList li .check_con{
+    width: 100%;
+    height:34px;
+    line-height: 34px;
+    margin:0;
+}
+.layer .areaList .magic-radio + label,.layer .areaList .magic-checkbox + label{
+    height: 32px;
+    width: 170px;
+    line-height: 32px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.layer .select_ndustry li input[type=checkbox]{
+    width: 16px;
+    margin-right: 5px;
 }
 /*多选框样式*/
 .magic-radio,
@@ -923,13 +955,15 @@
 .magic-radio + label:before,
 .magic-checkbox + label:before {
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 0;
+    margin-top: -8px;
     display: inline-block;
     width: 15px;
     height: 15px;
     content: '';
-    border: 1px solid #c0c0c0; }
+    border: 1px solid #c0c0c0; 
+}
 .magic-radio + label:after,
 .magic-checkbox + label:after {
     position: absolute;
@@ -985,8 +1019,9 @@
     border-radius: 3px; }
 
 .magic-checkbox + label:after {
-    top: 0;
+    top: 50%;
     left: 5px;
+    margin-top: -8px;
     box-sizing: border-box;
     width: 6px;
     height: 12px;
@@ -1689,5 +1724,8 @@ input[type=checkbox] {
     }
     .type-select ul{
         width: 170px;
+    }
+    .select_ndustry{
+        max-height: 400px;
     }
 }
