--- a/src/main/webapp/template/meeting_manager.html
+++ b/src/main/webapp/template/meeting_manager.html
@@ -72,6 +72,10 @@
             <li>
                 <div class="fl">可用设备:</div>
                     <div class="fr" style="height:28px;line-height: 20px;margin-top: 8px;">
+                        <div class="fl check_con">
+                            <input class="magic-checkbox" type="checkbox" name="layout" id="c5">
+                            <label for="c5"><span>白板</span></label>
+                        </div>
                     <div class="fl check_con">
                         <input class="magic-checkbox" type="checkbox" name="layout" id="c1">
                         <label for="c1"><span>投影仪</span></label>
