--- a/src/main/webapp/template/scheduled_preview.html
+++ b/src/main/webapp/template/scheduled_preview.html
@@ -28,6 +28,7 @@
                     <li data-value="-1">未开始</li>
                     <li data-value="0">会议中</li>
                     <li data-value="1">已结束</li>
+                    <li data-value="2">已取消</li>
                 </ul>
             </div>
             <div class="clear"></div>
